--- a/helloMaven/pom.xml
+++ b/helloMaven/pom.xml
@@ -26,9 +26,13 @@
 	mvn xxx 触发了不同的构建过程
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <!--  pom版本号,不再改变 -->
   <modelVersion>4.0.0</modelVersion>
+  <!-- 组织名加项目名 -->
   <groupId>com.happtim.maven</groupId>
+  <!-- 版本号 snapshot是正在开发中的版本 -->
   <version>0.0.1-SNAPSHOT</version>
+  <!-- 模块名 -->
   <artifactId>hello</artifactId>
   <name>hello</name>
 
