--- a/makeFriend/pom.xml
+++ b/makeFriend/pom.xml
@@ -14,6 +14,34 @@
 		provided	provided	- 		provided	provided
 		runtime		runtime		- 		- 			runtime
 
+3. 声明周期
+		Clean Lifecycle 在进行真正的构建之前进行一些清理工作
+		Default Lifecycle 构建的核心部分,编译,测试,打包,部署.
+		Site Lifecycle 生成项目报告,站点,发布站点
+		再次强调一些她们是相互独立的,你可以仅仅调用clean来清理工作目录,仅仅调用site来生成站点.当然也可以同时运行mvn clean install site运行所有这三套生命周期.
+
+	Clean 生命周期
+		pre-clean  执行一些需要在clean之前完成的工作
+		clean  移除所有上一次构建生成的文件
+		post-clean  执行一些需要在clean之后立刻完成的工作
+
+	Site 生命周期
+		pre-site     执行一些需要在生成站点文档之前完成的工作
+		site    生成项目的站点文档
+		post-site     执行一些需要在生成站点文档之后完成的工作，并且为部署做准备
+		site-deploy     将生成的站点文档部署到特定的服务器上
+
+	Default 生命周期
+		validate
+		....
+		compile
+		...
+		test
+		...
+		package
+		...
+		verify
+		install
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
