--- a/makeFriend/pom.xml
+++ b/makeFriend/pom.xml
@@ -46,10 +46,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <!--
   <groupId>com.happtim.maven</groupId>
+  -->
   <artifactId>makeFriend</artifactId>
+  <!--
   <version>0.0.1-SNAPSHOT</version>
+  -->
   <packaging>jar</packaging>
+
+  <!-- parent 用于继承 -->
+  <parent>
+  	 <groupId>com.happtim.maven</groupId>
+  	 <artifactId>parent</artifactId>
+  	 <version>0.0.1-SNAPSHOT</version>
+  	 <!-- 相对于父pom的位置 -->
+  	 <relativePath>../parent/pom.xml</relativePath>
+  </parent>
 
   <dependencies>
 	<!--
